--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "aws-session-token",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "AWS session token generator with MFA support",
   "main": "index.ts",
   "scripts": {
     "start": "npm run token",
-    "token": "npx ts-node index.ts"
+    "token": "npx ts-node index.ts",
+    "build" : "npx tsc"
   },
   "homepage": "https://github.com/tieu-cv/aws-session-token",
   "repository": {
@@ -19,7 +20,6 @@
     "AWS"
   ],
   "license": "ISC",
-  "type": "commonjs",
   "devDependencies": {
     "@types/node": "^22.13.9",
     "ts-node": "^10.9.2",
